#3271 Fix compilation issue